@@ -30,6 +30,8 @@ static DirBlockInfo main_dir;
 static int cod_lst_line_number = 0;
 static int blocks = 0;
 
+extern int _16bit_core;
+
 static void
 init_DirBlock(DirBlockInfo *a_dir)
 {
@@ -50,9 +52,15 @@ init_DirBlock(DirBlockInfo *a_dir)
 
   /* Initialize the directory block with known data. It'll be written
    * to the .cod file after everything else */
-
+  gp_cod_strncpy(&a_dir->dir.block[COD_DIR_SOURCE], 
+	         state.srcfilename,
+	         COD_DIR_DATE - COD_DIR_SOURCE);
+  gp_cod_date(&a_dir->dir.block[COD_DIR_DATE], 
+              COD_DIR_TIME - COD_DIR_DATE);
+  gp_cod_time(&a_dir->dir.block[COD_DIR_TIME], 
+              COD_DIR_VERSION - COD_DIR_TIME);
   gp_cod_strncpy(&a_dir->dir.block[COD_DIR_VERSION], 
-	         GPASM_VERSION_STRING,
+	         VERSION,
 	         COD_DIR_COMPILER - COD_DIR_VERSION);
   gp_cod_strncpy(&a_dir->dir.block[COD_DIR_COMPILER], 
 	         "gpasm",
@@ -89,7 +97,6 @@ cod_init(void)
       perror(state.codfilename);
       exit(1);
     }
-    add_file(ft_cod,state.codfilename);
     state.cod.enabled = 1;
   }
 
@@ -152,7 +159,7 @@ write_file_block(void)
 
   /* Find the head of the file list: */
 
-  fc = state.files->prev;
+  fc = state.files;
   while(fc->prev && id_number++ < 1000) {
     fc = fc->prev;
   }
@@ -256,7 +263,8 @@ cod_lst_line(int line_type)
     gp_putl16(&lb.block[offset + COD_LS_SLINE], state.src->line_number);
 
     /* Write the address of the opcode. */
-    gp_putl16(&lb.block[offset + COD_LS_SLOC], state.lst.line.was_org);
+    gp_putl16(&lb.block[offset + COD_LS_SLOC], 
+              state.lst.line.was_org << _16bit_core);
 
     break;
   case COD_LAST_LST_LINE:
@@ -480,7 +488,7 @@ cod_write_code(void)
 	     is needed. This is done by writing the start and end address to
 	     the directory map. */
 	  gp_putl16(&rb.block[offset], 2*start_address);
-	  gp_putl16(&rb.block[offset+2], 2*(i-1));
+	  gp_putl16(&rb.block[offset+2], 2*(i-1) + 1);
 
 	  offset += 4;
 	  if(offset>=COD_BLOCK_SIZE) {
