@@ -33,7 +33,7 @@ char *source_file_names[MAX_SOURCE_FILES];
 FILE *source_files[MAX_SOURCE_FILES];
 DirBlockInfo main_dir;
 
-int addrsize;
+int byte_addr;
 
 char directory_block_data[COD_BLOCK_SIZE];
 char * SymbolType4[154] = {
@@ -126,7 +126,7 @@ int main(int argc, char *argv[])
 
   gp_init();
 
-  addrsize = 1;
+  byte_addr = 0;
 
 #define DISPLAY_NOTHING 0
 #define DISPLAY_DIR     1
